# ray-tracing-test

./: .gitignore  CMakeLists.txt  main.cpp
dependencies/: Camera.cpp  Camera.h  Color.cpp  Color.h  Hittable.cpp  Hittable.h  Image.cpp  Image.h  Material.cpp  Material.h  Ray.cpp  Ray.h  Screen.cpp  Screen.h  Sphere.cpp  Sphere.h  Util.cpp  Util.h  Vector.cpp  Vector.h  World.cpp  World.h
